--- a/arch/arm64/boot/dts/marvell/armada-7040-db.dts
+++ b/arch/arm64/boot/dts/marvell/armada-7040-db.dts
@@ -66,6 +66,7 @@
 	clock-frequency = <100000>;
 };
 
+#if 0
 &spi0 {
 	status = "okay";
 
@@ -92,6 +93,7 @@
 		};
 	};
 };
+#endif
 
 &uart0 {
 	status = "okay";
@@ -128,6 +130,7 @@
 	};
 };
 
+#if 0
 &cpm_spi1 {
 	status = "okay";
 
@@ -155,6 +158,7 @@
 		};
 	};
 };
+#endif
 
 &cpm_sata0 {
 	status = "okay";
